toggle-more theory added

--- a/dom/style-dom.css
+++ b/dom/style-dom.css
@@ -1,5 +1,5 @@
 .hola{
-    color: crimson;
+    color: deeppink;
     background-color: rgb(104, 228, 237);
     font-weight: 700;
     font-size: 30px;
